Use swagger2openapi and add model detection
